Fix: Add comprehensive Hungarian translations to dashboard components

--- a/locales/hu.json
+++ b/locales/hu.json
@@ -188,7 +188,37 @@
     "quickMachineAccess": "Gyors gépelérés",
     "logout": "Kijelentkezés",
     "selectRoom": "Szoba kiválasztása",
-    "noRoomsAvailable": "Nincsenek elérhető szobák"
+    "noRoomsAvailable": "Nincsenek elérhető szobák",
+    "systemStatus": "Rendszer állapota",
+    "totalMachines": "Összes gép",
+    "yourActivity": "Az Ön tevékenysége",
+    "totalSessions": "Összes munkamenet",
+    "totalMinutes": "Összes perc",
+    "avgDuration": "Átlagos időtartam",
+    "thisMonth": "Ez a hónap",
+    "upcomingReservations": "Közelgő foglalások (következő 24 óra)",
+    "quickStats": "Gyors statisztikák",
+    "activeSessions": "Aktív munkamenetek",
+    "totalUsers": "Összes felhasználó",
+    "utilization": "Kihasználtság",
+    "yourReservations": "Az Ön foglalásai",
+    "status": "Állapot",
+    "noReservations": "Nincsenek foglalások erre a napra",
+    "newReservation": "Új foglalás",
+    "cancelReservation": "Foglalás törlése",
+    "createReservation": "Foglalás létrehozása",
+    "creating": "Létrehozás...",
+    "selectMachine": "Gép kiválasztása",
+    "startTime": "Kezdési idő",
+    "endTime": "Befejezési idő",
+    "machine": "Gép",
+    "dayOfWeek": "Hét napja",
+    "dailyUsage": "Napi használat",
+    "last7Days": "Utolsó 7 nap",
+    "last30Days": "Utolsó 30 nap",
+    "last90Days": "Utolsó 90 nap",
+    "machineUsage": "Géphasználat",
+    "usageByMachine": "Használat gépek szerint"
   },
   "machines": {
     "title": "Gépek",
