Fix: Add comprehensive translations for all dashboard components and missing translation keys to all language files

--- a/locales/be.json
+++ b/locales/be.json
@@ -20,7 +20,10 @@
     "profile": "Profiel",
     "settings": "Instellingen",
     "help": "Help",
-    "about": "Over"
+    "about": "Over",
+    "email": "E-mail",
+    "phone": "Telefoon",
+    "apartment": "Appartement"
   },
   "landing": {
     "title": "CleanCycle",
@@ -188,7 +191,76 @@
     "quickMachineAccess": "Snelle machinebereik",
     "logout": "Afmelden",
     "selectRoom": "Kamer selecteren",
-    "noRoomsAvailable": "Geen kamers beschikbaar"
+    "noRoomsAvailable": "Geen kamers beschikbaar",
+    "systemStatus": "Systeemstatus",
+    "totalMachines": "Totaal aantal machines",
+    "yourActivity": "Uw activiteit",
+    "totalSessions": "Totale sessies",
+    "totalMinutes": "Totale minuten",
+    "avgDuration": "Gemiddelde duur",
+    "thisMonth": "Deze maand",
+    "upcomingReservations": "Aankomende reserveringen (volgende 24 uur)",
+    "quickStats": "Snelle statistieken",
+    "activeSessions": "Actieve sessies",
+    "totalUsers": "Totale gebruikers",
+    "utilization": "Gebruik",
+    "yourReservations": "Uw reserveringen",
+    "status": "Status",
+    "noReservations": "Geen reserveringen voor deze datum",
+    "newReservation": "Nieuwe reservering",
+    "cancelReservation": "Reservering annuleren",
+    "createReservation": "Reservering maken",
+    "creating": "Maken...",
+    "selectMachine": "Selecteer een machine",
+    "startTime": "Starttijd",
+    "endTime": "Eindtijd",
+    "machine": "Machine",
+    "dayOfWeek": "Dag van de week",
+    "dailyUsage": "Dagelijks gebruik",
+    "last7Days": "Afgelopen 7 dagen",
+    "last30Days": "Afgelopen 30 dagen",
+    "last90Days": "Afgelopen 90 dagen",
+    "machineUsage": "Machinegebruik",
+    "usageByMachine": "Gebruik per machine",
+    "personalInformation": "Persoonlijke informatie",
+    "notificationPreferences": "Meldingsvoorkeuren",
+    "security": "Beveiliging",
+    "changePassword": "Wachtwoord wijzigen",
+    "newPassword": "Nieuw wachtwoord",
+    "confirmPassword": "Wachtwoord bevestigen",
+    "updatePassword": "Wachtwoord bijwerken",
+    "saving": "Opslaan...",
+    "saveChanges": "Wijzigingen opslaan",
+    "emailNotifications": "E-mailmeldingen",
+    "pushNotifications": "Pushmeldingen",
+    "inAppNotifications": "In-app meldingen",
+    "reminderTime": "Herinneringstijd (minuten ervoor)",
+    "profileUpdatedSuccessfully": "Profiel succesvol bijgewerkt!",
+    "failedToUpdateProfile": "Profiel bijwerken mislukt",
+    "passwordChangedSuccessfully": "Wachtwoord succesvol gewijzigd!",
+    "failedToChangePassword": "Wachtwoord wijzigen mislukt",
+    "passwordsDoNotMatch": "Wachtwoorden komen niet overeen",
+    "passwordMustBeAtLeast6Characters": "Wachtwoord moet minstens 6 tekens lang zijn",
+    "preferencesUpdated": "Voorkeuren bijgewerkt!",
+    "failedToUpdatePreferences": "Voorkeuren bijwerken mislukt",
+    "notLoggedIn": "Niet ingelogd",
+    "errorStartingMachine": "Fout bij het starten van de machine",
+    "startingMachine": "Starten...",
+    "start": "Start",
+    "duration": "Duur (minuten)",
+    "expectedEnd": "Verwacht einde",
+    "noMachinesInThisRoom": "Geen machines in deze kamer",
+    "autoRefreshEvery5Seconds": "🔄 Automatisch vernieuwen elke 5 seconden",
+    "refreshNow": "Nu vernieuwen",
+    "notSet": "Niet ingesteld",
+    "timeRemaining": "Resterende tijd",
+    "defaultDuration": "Standaardduur",
+    "started": "Gestart",
+    "expectedEndTime": "Verwacht einde",
+    "noNotifications": "Geen meldingen",
+    "unread": "ongelezen",
+    "close": "Sluiten",
+    "expired": "Verlopen"
   },
   "machines": {
     "title": "Machines",
