--- a/locales/bg.json
+++ b/locales/bg.json
@@ -20,7 +20,10 @@
     "profile": "Профил",
     "settings": "Настройки",
     "help": "Помощ",
-    "about": "За нас"
+    "about": "За нас",
+    "email": "Имейл",
+    "phone": "Телефон",
+    "apartment": "Апартамент"
   },
   "landing": {
     "title": "CleanCycle",
@@ -188,7 +191,76 @@
     "quickMachineAccess": "Бърз достъп до машини",
     "logout": "Излизане",
     "selectRoom": "Изберете стая",
-    "noRoomsAvailable": "Няма налични стаи"
+    "noRoomsAvailable": "Няма налични стаи",
+    "systemStatus": "Статус на системата",
+    "totalMachines": "Общо машини",
+    "yourActivity": "Вашата активност",
+    "totalSessions": "Общо сесии",
+    "totalMinutes": "Общо минути",
+    "avgDuration": "Средна продължителност",
+    "thisMonth": "Този месец",
+    "upcomingReservations": "Предстоящи резервации (следващи 24 часа)",
+    "quickStats": "Бързи статистики",
+    "activeSessions": "Активни сесии",
+    "totalUsers": "Общо потребители",
+    "utilization": "Използване",
+    "yourReservations": "Вашите резервации",
+    "status": "Статус",
+    "noReservations": "Няма резервации за тази дата",
+    "newReservation": "Нова резервация",
+    "cancelReservation": "Отмяна на резервация",
+    "createReservation": "Създаване на резервация",
+    "creating": "Създаване...",
+    "selectMachine": "Изберете машина",
+    "startTime": "Начално време",
+    "endTime": "Крайно време",
+    "machine": "Машина",
+    "dayOfWeek": "Ден от седмицата",
+    "dailyUsage": "Дневно използване",
+    "last7Days": "Последните 7 дни",
+    "last30Days": "Последните 30 дни",
+    "last90Days": "Последните 90 дни",
+    "machineUsage": "Използване на машини",
+    "usageByMachine": "Използване по машина",
+    "personalInformation": "Лична информация",
+    "notificationPreferences": "Предпочитания за известия",
+    "security": "Безопасност",
+    "changePassword": "Смяна на парола",
+    "newPassword": "Нова парола",
+    "confirmPassword": "Потвърждаване на парола",
+    "updatePassword": "Актуализиране на парола",
+    "saving": "Запазване...",
+    "saveChanges": "Запазване на промени",
+    "emailNotifications": "Имейл известия",
+    "pushNotifications": "Пушни известия",
+    "inAppNotifications": "Известия в приложението",
+    "reminderTime": "Време на напомняне (минути преди)",
+    "profileUpdatedSuccessfully": "Профилът е успешно актуализиран!",
+    "failedToUpdateProfile": "Неуспешна актуализация на профила",
+    "passwordChangedSuccessfully": "Паролата е успешно променена!",
+    "failedToChangePassword": "Неуспешна смяна на парола",
+    "passwordsDoNotMatch": "Паролите не съвпадат",
+    "passwordMustBeAtLeast6Characters": "Паролата трябва да бъде поне 6 символа",
+    "preferencesUpdated": "Предпочитанията са актуализирани!",
+    "failedToUpdatePreferences": "Неуспешна актуализация на предпочитанията",
+    "notLoggedIn": "Не сте влезли",
+    "errorStartingMachine": "Грешка при стартиране на машина",
+    "startingMachine": "Стартиране...",
+    "start": "Старт",
+    "duration": "Продължителност (минути)",
+    "expectedEnd": "Очаквано завършване",
+    "noMachinesInThisRoom": "Няма машини в тази стая",
+    "autoRefreshEvery5Seconds": "🔄 Автоматично обновяване всеки 5 секунди",
+    "refreshNow": "Обновяване сега",
+    "notSet": "Не е зададено",
+    "timeRemaining": "Оставащо време",
+    "defaultDuration": "Продължителност по подразбиране",
+    "started": "Стартирано",
+    "expectedEndTime": "Очаквано завършване",
+    "noNotifications": "Няма известия",
+    "unread": "непрочетено",
+    "close": "Затваряне",
+    "expired": "Изтекло"
   },
   "machines": {
     "title": "Машини",
