--- a/locales/de.json
+++ b/locales/de.json
@@ -20,7 +20,10 @@
     "profile": "Profil",
     "settings": "Einstellungen",
     "help": "Hilfe",
-    "about": "Über"
+    "about": "Über",
+    "email": "E-Mail",
+    "phone": "Telefon",
+    "apartment": "Wohnung"
   },
   "landing": {
     "title": "CleanCycle",
@@ -188,7 +191,76 @@
     "quickMachineAccess": "Schneller Maschinenzugriff",
     "logout": "Abmelden",
     "selectRoom": "Raum auswählen",
-    "noRoomsAvailable": "Keine Räume verfügbar"
+    "noRoomsAvailable": "Keine Räume verfügbar",
+    "systemStatus": "Systemstatus",
+    "totalMachines": "Gesamtzahl der Maschinen",
+    "yourActivity": "Ihre Aktivität",
+    "totalSessions": "Gesamtsitzungen",
+    "totalMinutes": "Gesamtminuten",
+    "avgDuration": "Durchschnittliche Dauer",
+    "thisMonth": "Diesen Monat",
+    "upcomingReservations": "Bevorstehende Reservierungen (nächste 24 Stunden)",
+    "quickStats": "Schnellstatistiken",
+    "activeSessions": "Aktive Sitzungen",
+    "totalUsers": "Gesamtbenutzer",
+    "utilization": "Auslastung",
+    "yourReservations": "Ihre Reservierungen",
+    "status": "Status",
+    "noReservations": "Keine Reservierungen für dieses Datum",
+    "newReservation": "Neue Reservierung",
+    "cancelReservation": "Reservierung stornieren",
+    "createReservation": "Reservierung erstellen",
+    "creating": "Wird erstellt...",
+    "selectMachine": "Wählen Sie eine Maschine",
+    "startTime": "Startzeit",
+    "endTime": "Endzeit",
+    "machine": "Maschine",
+    "dayOfWeek": "Wochentag",
+    "dailyUsage": "Tägliche Nutzung",
+    "last7Days": "Letzte 7 Tage",
+    "last30Days": "Letzte 30 Tage",
+    "last90Days": "Letzte 90 Tage",
+    "machineUsage": "Maschinennutzung",
+    "usageByMachine": "Nutzung nach Maschine",
+    "personalInformation": "Persönliche Informationen",
+    "notificationPreferences": "Benachrichtigungseinstellungen",
+    "security": "Sicherheit",
+    "changePassword": "Passwort ändern",
+    "newPassword": "Neues Passwort",
+    "confirmPassword": "Passwort bestätigen",
+    "updatePassword": "Passwort aktualisieren",
+    "saving": "Wird gespeichert...",
+    "saveChanges": "Änderungen speichern",
+    "emailNotifications": "E-Mail-Benachrichtigungen",
+    "pushNotifications": "Push-Benachrichtigungen",
+    "inAppNotifications": "In-App-Benachrichtigungen",
+    "reminderTime": "Erinnerungszeit (Minuten vorher)",
+    "profileUpdatedSuccessfully": "Profil erfolgreich aktualisiert!",
+    "failedToUpdateProfile": "Fehler beim Aktualisieren des Profils",
+    "passwordChangedSuccessfully": "Passwort erfolgreich geändert!",
+    "failedToChangePassword": "Fehler beim Ändern des Passworts",
+    "passwordsDoNotMatch": "Passwörter stimmen nicht überein",
+    "passwordMustBeAtLeast6Characters": "Passwort muss mindestens 6 Zeichen lang sein",
+    "preferencesUpdated": "Einstellungen aktualisiert!",
+    "failedToUpdatePreferences": "Fehler beim Aktualisieren der Einstellungen",
+    "notLoggedIn": "Nicht angemeldet",
+    "errorStartingMachine": "Fehler beim Starten der Maschine",
+    "startingMachine": "Wird gestartet...",
+    "start": "Start",
+    "duration": "Dauer (Minuten)",
+    "expectedEnd": "Erwartetes Ende",
+    "noMachinesInThisRoom": "Keine Maschinen in diesem Raum",
+    "autoRefreshEvery5Seconds": "🔄 Automatische Aktualisierung alle 5 Sekunden",
+    "refreshNow": "Jetzt aktualisieren",
+    "notSet": "Nicht gesetzt",
+    "timeRemaining": "Verbleibende Zeit",
+    "defaultDuration": "Standarddauer",
+    "started": "Gestartet",
+    "expectedEndTime": "Erwartetes Ende",
+    "noNotifications": "Keine Benachrichtigungen",
+    "unread": "ungelesen",
+    "close": "Schließen",
+    "expired": "Abgelaufen"
   },
   "machines": {
     "title": "Maschinen",
