--- a/locales/en.json
+++ b/locales/en.json
@@ -20,7 +20,10 @@
     "profile": "Profile",
     "settings": "Settings",
     "help": "Help",
-    "about": "About"
+    "about": "About",
+    "email": "Email",
+    "phone": "Phone",
+    "apartment": "Apartment"
   },
   "landing": {
     "title": "CleanCycle",
@@ -197,7 +200,76 @@
     "quickMachineAccess": "Quick Machine Access",
     "logout": "Logout",
     "selectRoom": "Select Room",
-    "noRoomsAvailable": "No rooms available"
+    "noRoomsAvailable": "No rooms available",
+    "systemStatus": "System Status",
+    "totalMachines": "Total Machines",
+    "yourActivity": "Your Activity",
+    "totalSessions": "Total Sessions",
+    "totalMinutes": "Total Minutes",
+    "avgDuration": "Avg Duration",
+    "thisMonth": "This Month",
+    "upcomingReservations": "Upcoming Reservations (Next 24h)",
+    "quickStats": "Quick Stats",
+    "activeSessions": "Active Sessions",
+    "totalUsers": "Total Users",
+    "utilization": "Utilization",
+    "yourReservations": "Your Reservations",
+    "status": "Status",
+    "noReservations": "No reservations for this date",
+    "newReservation": "New Reservation",
+    "cancelReservation": "Cancel Reservation",
+    "createReservation": "Create Reservation",
+    "creating": "Creating...",
+    "selectMachine": "Select a machine",
+    "startTime": "Start Time",
+    "endTime": "End Time",
+    "machine": "Machine",
+    "dayOfWeek": "Day of Week",
+    "dailyUsage": "Daily Usage",
+    "last7Days": "Last 7 days",
+    "last30Days": "Last 30 days",
+    "last90Days": "Last 90 days",
+    "machineUsage": "Machine Usage",
+    "usageByMachine": "Usage by Machine",
+    "personalInformation": "Personal Information",
+    "notificationPreferences": "Notification Preferences",
+    "security": "Security",
+    "changePassword": "Change Password",
+    "newPassword": "New Password",
+    "confirmPassword": "Confirm Password",
+    "updatePassword": "Update Password",
+    "saving": "Saving...",
+    "saveChanges": "Save Changes",
+    "emailNotifications": "Email Notifications",
+    "pushNotifications": "Push Notifications",
+    "inAppNotifications": "In-App Notifications",
+    "reminderTime": "Reminder Time (minutes before)",
+    "profileUpdatedSuccessfully": "Profile updated successfully!",
+    "failedToUpdateProfile": "Failed to update profile",
+    "passwordChangedSuccessfully": "Password changed successfully!",
+    "failedToChangePassword": "Failed to change password",
+    "passwordsDoNotMatch": "Passwords do not match",
+    "passwordMustBeAtLeast6Characters": "Password must be at least 6 characters",
+    "preferencesUpdated": "Preferences updated!",
+    "failedToUpdatePreferences": "Failed to update preferences",
+    "notLoggedIn": "Not logged in",
+    "errorStartingMachine": "Error starting machine",
+    "startingMachine": "Starting...",
+    "start": "Start",
+    "duration": "Duration (minutes)",
+    "expectedEnd": "Expected End",
+    "noMachinesInThisRoom": "No machines in this room",
+    "autoRefreshEvery5Seconds": "🔄 Auto-refresh every 5 seconds",
+    "refreshNow": "Refresh Now",
+    "notSet": "Not set",
+    "timeRemaining": "Time Remaining",
+    "defaultDuration": "Default Duration",
+    "started": "Started",
+    "expectedEndTime": "Expected End",
+    "noNotifications": "No notifications",
+    "unread": "unread",
+    "close": "Close",
+    "expired": "Expired"
   },
   "machines": {
     "title": "Machines",
