--- a/locales/fr.json
+++ b/locales/fr.json
@@ -20,7 +20,10 @@
     "profile": "Profil",
     "settings": "Paramètres",
     "help": "Aide",
-    "about": "À propos"
+    "about": "À propos",
+    "email": "E-mail",
+    "phone": "Téléphone",
+    "apartment": "Appartement"
   },
   "landing": {
     "title": "CleanCycle",
@@ -188,7 +191,76 @@
     "quickMachineAccess": "Accès rapide aux machines",
     "logout": "Déconnexion",
     "selectRoom": "Sélectionner une salle",
-    "noRoomsAvailable": "Aucune salle disponible"
+    "noRoomsAvailable": "Aucune salle disponible",
+    "systemStatus": "État du système",
+    "totalMachines": "Nombre total de machines",
+    "yourActivity": "Votre activité",
+    "totalSessions": "Nombre total de sessions",
+    "totalMinutes": "Nombre total de minutes",
+    "avgDuration": "Durée moyenne",
+    "thisMonth": "Ce mois",
+    "upcomingReservations": "Réservations à venir (24 prochaines heures)",
+    "quickStats": "Statistiques rapides",
+    "activeSessions": "Sessions actives",
+    "totalUsers": "Nombre total d'utilisateurs",
+    "utilization": "Utilisation",
+    "yourReservations": "Vos réservations",
+    "status": "Statut",
+    "noReservations": "Aucune réservation pour cette date",
+    "newReservation": "Nouvelle réservation",
+    "cancelReservation": "Annuler la réservation",
+    "createReservation": "Créer une réservation",
+    "creating": "Création en cours...",
+    "selectMachine": "Sélectionner une machine",
+    "startTime": "Heure de début",
+    "endTime": "Heure de fin",
+    "machine": "Machine",
+    "dayOfWeek": "Jour de la semaine",
+    "dailyUsage": "Utilisation quotidienne",
+    "last7Days": "7 derniers jours",
+    "last30Days": "30 derniers jours",
+    "last90Days": "90 derniers jours",
+    "machineUsage": "Utilisation des machines",
+    "usageByMachine": "Utilisation par machine",
+    "personalInformation": "Informations personnelles",
+    "notificationPreferences": "Préférences de notification",
+    "security": "Sécurité",
+    "changePassword": "Changer le mot de passe",
+    "newPassword": "Nouveau mot de passe",
+    "confirmPassword": "Confirmer le mot de passe",
+    "updatePassword": "Mettre à jour le mot de passe",
+    "saving": "Enregistrement en cours...",
+    "saveChanges": "Enregistrer les modifications",
+    "emailNotifications": "Notifications par e-mail",
+    "pushNotifications": "Notifications push",
+    "inAppNotifications": "Notifications dans l'application",
+    "reminderTime": "Heure du rappel (minutes avant)",
+    "profileUpdatedSuccessfully": "Profil mis à jour avec succès!",
+    "failedToUpdateProfile": "Échec de la mise à jour du profil",
+    "passwordChangedSuccessfully": "Mot de passe changé avec succès!",
+    "failedToChangePassword": "Échec du changement de mot de passe",
+    "passwordsDoNotMatch": "Les mots de passe ne correspondent pas",
+    "passwordMustBeAtLeast6Characters": "Le mot de passe doit contenir au moins 6 caractères",
+    "preferencesUpdated": "Préférences mises à jour!",
+    "failedToUpdatePreferences": "Échec de la mise à jour des préférences",
+    "notLoggedIn": "Non connecté",
+    "errorStartingMachine": "Erreur au démarrage de la machine",
+    "startingMachine": "Démarrage en cours...",
+    "start": "Démarrer",
+    "duration": "Durée (minutes)",
+    "expectedEnd": "Fin prévue",
+    "noMachinesInThisRoom": "Aucune machine dans cette salle",
+    "autoRefreshEvery5Seconds": "🔄 Actualisation automatique toutes les 5 secondes",
+    "refreshNow": "Actualiser maintenant",
+    "notSet": "Non défini",
+    "timeRemaining": "Temps restant",
+    "defaultDuration": "Durée par défaut",
+    "started": "Démarré",
+    "expectedEndTime": "Fin prévue",
+    "noNotifications": "Aucune notification",
+    "unread": "non lu",
+    "close": "Fermer",
+    "expired": "Expiré"
   },
   "machines": {
     "title": "Machines",
