--- a/locales/hu.json
+++ b/locales/hu.json
@@ -20,7 +20,10 @@
     "profile": "Profil",
     "settings": "Beállítások",
     "help": "Súgó",
-    "about": "Névjegy"
+    "about": "Névjegy",
+    "email": "E-mail",
+    "phone": "Telefon",
+    "apartment": "Lakás"
   },
   "landing": {
     "title": "CleanCycle",
@@ -218,7 +221,46 @@
     "last30Days": "Utolsó 30 nap",
     "last90Days": "Utolsó 90 nap",
     "machineUsage": "Géphasználat",
-    "usageByMachine": "Használat gépek szerint"
+    "usageByMachine": "Használat gépek szerint",
+    "personalInformation": "Személyes adatok",
+    "notificationPreferences": "Értesítési beállítások",
+    "security": "Biztonság",
+    "changePassword": "Jelszó módosítása",
+    "newPassword": "Új jelszó",
+    "confirmPassword": "Jelszó megerősítése",
+    "updatePassword": "Jelszó frissítése",
+    "saving": "Mentés...",
+    "saveChanges": "Módosítások mentése",
+    "emailNotifications": "E-mail értesítések",
+    "pushNotifications": "Leküldéses értesítések",
+    "inAppNotifications": "Alkalmazáson belüli értesítések",
+    "reminderTime": "Emlékeztetés ideje (perc az előtt)",
+    "profileUpdatedSuccessfully": "Profil sikeresen frissítve!",
+    "failedToUpdateProfile": "A profil frissítése sikertelen",
+    "passwordChangedSuccessfully": "Jelszó sikeresen módosítva!",
+    "failedToChangePassword": "A jelszó módosítása sikertelen",
+    "passwordsDoNotMatch": "A jelszavak nem egyeznek",
+    "passwordMustBeAtLeast6Characters": "A jelszónak legalább 6 karakter hosszúnak kell lennie",
+    "preferencesUpdated": "Beállítások frissítve!",
+    "failedToUpdatePreferences": "A beállítások frissítése sikertelen",
+    "notLoggedIn": "Nincs bejelentkezve",
+    "errorStartingMachine": "Hiba a gép indításakor",
+    "startingMachine": "Indítás...",
+    "start": "Indítás",
+    "duration": "Időtartam (perc)",
+    "expectedEnd": "Várható befejezés",
+    "noMachinesInThisRoom": "Nincsenek gépek ebben a szobában",
+    "autoRefreshEvery5Seconds": "🔄 Automatikus frissítés 5 másodpercenként",
+    "refreshNow": "Frissítés most",
+    "notSet": "Nincs beállítva",
+    "timeRemaining": "Hátralévő idő",
+    "defaultDuration": "Alapértelmezett időtartam",
+    "started": "Elindítva",
+    "expectedEndTime": "Várható befejezés",
+    "noNotifications": "Nincsenek értesítések",
+    "unread": "olvasatlan",
+    "close": "Bezárás",
+    "expired": "Lejárt"
   },
   "machines": {
     "title": "Gépek",
