--- a/locales/it.json
+++ b/locales/it.json
@@ -20,7 +20,10 @@
     "profile": "Profilo",
     "settings": "Impostazioni",
     "help": "Aiuto",
-    "about": "Informazioni"
+    "about": "Informazioni",
+    "email": "Email",
+    "phone": "Telefono",
+    "apartment": "Appartamento"
   },
   "landing": {
     "title": "CleanCycle",
@@ -188,7 +191,76 @@
     "quickMachineAccess": "Accesso rapido alle macchine",
     "logout": "Esci",
     "selectRoom": "Seleziona stanza",
-    "noRoomsAvailable": "Nessuna stanza disponibile"
+    "noRoomsAvailable": "Nessuna stanza disponibile",
+    "systemStatus": "Stato del sistema",
+    "totalMachines": "Numero totale di macchine",
+    "yourActivity": "La tua attività",
+    "totalSessions": "Sessioni totali",
+    "totalMinutes": "Minuti totali",
+    "avgDuration": "Durata media",
+    "thisMonth": "Questo mese",
+    "upcomingReservations": "Prenotazioni in arrivo (prossime 24 ore)",
+    "quickStats": "Statistiche rapide",
+    "activeSessions": "Sessioni attive",
+    "totalUsers": "Numero totale di utenti",
+    "utilization": "Utilizzo",
+    "yourReservations": "Le tue prenotazioni",
+    "status": "Stato",
+    "noReservations": "Nessuna prenotazione per questa data",
+    "newReservation": "Nuova prenotazione",
+    "cancelReservation": "Annulla prenotazione",
+    "createReservation": "Crea prenotazione",
+    "creating": "Creazione in corso...",
+    "selectMachine": "Seleziona una macchina",
+    "startTime": "Ora di inizio",
+    "endTime": "Ora di fine",
+    "machine": "Macchina",
+    "dayOfWeek": "Giorno della settimana",
+    "dailyUsage": "Utilizzo giornaliero",
+    "last7Days": "Ultimi 7 giorni",
+    "last30Days": "Ultimi 30 giorni",
+    "last90Days": "Ultimi 90 giorni",
+    "machineUsage": "Utilizzo macchine",
+    "usageByMachine": "Utilizzo per macchina",
+    "personalInformation": "Informazioni personali",
+    "notificationPreferences": "Preferenze di notifica",
+    "security": "Sicurezza",
+    "changePassword": "Cambia password",
+    "newPassword": "Nuova password",
+    "confirmPassword": "Conferma password",
+    "updatePassword": "Aggiorna password",
+    "saving": "Salvataggio in corso...",
+    "saveChanges": "Salva modifiche",
+    "emailNotifications": "Notifiche email",
+    "pushNotifications": "Notifiche push",
+    "inAppNotifications": "Notifiche in-app",
+    "reminderTime": "Tempo promemoria (minuti prima)",
+    "profileUpdatedSuccessfully": "Profilo aggiornato con successo!",
+    "failedToUpdateProfile": "Impossibile aggiornare il profilo",
+    "passwordChangedSuccessfully": "Password modificata con successo!",
+    "failedToChangePassword": "Impossibile modificare la password",
+    "passwordsDoNotMatch": "Le password non corrispondono",
+    "passwordMustBeAtLeast6Characters": "La password deve contenere almeno 6 caratteri",
+    "preferencesUpdated": "Preferenze aggiornate!",
+    "failedToUpdatePreferences": "Impossibile aggiornare le preferenze",
+    "notLoggedIn": "Non connesso",
+    "errorStartingMachine": "Errore nell'avvio della macchina",
+    "startingMachine": "Avvio in corso...",
+    "start": "Avvia",
+    "duration": "Durata (minuti)",
+    "expectedEnd": "Fine prevista",
+    "noMachinesInThisRoom": "Nessuna macchina in questa stanza",
+    "autoRefreshEvery5Seconds": "🔄 Aggiornamento automatico ogni 5 secondi",
+    "refreshNow": "Aggiorna ora",
+    "notSet": "Non impostato",
+    "timeRemaining": "Tempo rimanente",
+    "defaultDuration": "Durata predefinita",
+    "started": "Avviato",
+    "expectedEndTime": "Fine prevista",
+    "noNotifications": "Nessuna notifica",
+    "unread": "non letto",
+    "close": "Chiudi",
+    "expired": "Scaduto"
   },
   "machines": {
     "title": "Macchine",
