--- a/locales/sk.json
+++ b/locales/sk.json
@@ -20,7 +20,10 @@
     "profile": "Profil",
     "settings": "Nastavenia",
     "help": "Pomoc",
-    "about": "O aplikácii"
+    "about": "O aplikácii",
+    "email": "E-mail",
+    "phone": "Telefón",
+    "apartment": "Byt"
   },
   "landing": {
     "title": "CleanCycle",
@@ -188,7 +191,76 @@
     "quickMachineAccess": "Rýchly prístup k strojom",
     "logout": "Odhlásiť sa",
     "selectRoom": "Vyberte miestnosť",
-    "noRoomsAvailable": "Žiadne dostupné miestnosti"
+    "noRoomsAvailable": "Žiadne dostupné miestnosti",
+    "systemStatus": "Stav systému",
+    "totalMachines": "Celkový počet strojov",
+    "yourActivity": "Vaša aktivita",
+    "totalSessions": "Celkové relácie",
+    "totalMinutes": "Celkové minúty",
+    "avgDuration": "Priemerná trvanie",
+    "thisMonth": "Tento mesiac",
+    "upcomingReservations": "Nadchádzajúce rezervácie (nasledujúcich 24 hodín)",
+    "quickStats": "Rýchle štatistiky",
+    "activeSessions": "Aktívne relácie",
+    "totalUsers": "Celkový počet používateľov",
+    "utilization": "Využitie",
+    "yourReservations": "Vaše rezervácie",
+    "status": "Stav",
+    "noReservations": "Žiadne rezervácie na tento dátum",
+    "newReservation": "Nová rezervácia",
+    "cancelReservation": "Zrušiť rezerváciu",
+    "createReservation": "Vytvoriť rezerváciu",
+    "creating": "Vytváranie...",
+    "selectMachine": "Vyberte stroj",
+    "startTime": "Čas začatia",
+    "endTime": "Čas ukončenia",
+    "machine": "Stroj",
+    "dayOfWeek": "Deň v týždni",
+    "dailyUsage": "Denné využitie",
+    "last7Days": "Posledných 7 dní",
+    "last30Days": "Posledných 30 dní",
+    "last90Days": "Posledných 90 dní",
+    "machineUsage": "Využitie strojov",
+    "usageByMachine": "Využitie podľa stroja",
+    "personalInformation": "Osobné informácie",
+    "notificationPreferences": "Preferencie upozornení",
+    "security": "Bezpečnosť",
+    "changePassword": "Zmeniť heslo",
+    "newPassword": "Nové heslo",
+    "confirmPassword": "Potvrdiť heslo",
+    "updatePassword": "Aktualizovať heslo",
+    "saving": "Ukladanie...",
+    "saveChanges": "Uložiť zmeny",
+    "emailNotifications": "E-mailové upozornenia",
+    "pushNotifications": "Push upozornenia",
+    "inAppNotifications": "Upozornenia v aplikácii",
+    "reminderTime": "Čas pripomenutia (minúty pred)",
+    "profileUpdatedSuccessfully": "Profil bol úspešne aktualizovaný!",
+    "failedToUpdateProfile": "Aktualizácia profilu zlyhala",
+    "passwordChangedSuccessfully": "Heslo bolo úspešne zmenené!",
+    "failedToChangePassword": "Zmena hesla zlyhala",
+    "passwordsDoNotMatch": "Heslá sa nezhodujú",
+    "passwordMustBeAtLeast6Characters": "Heslo musí mať aspoň 6 znakov",
+    "preferencesUpdated": "Preferencie boli aktualizované!",
+    "failedToUpdatePreferences": "Aktualizácia preferencií zlyhala",
+    "notLoggedIn": "Nie ste prihlásení",
+    "errorStartingMachine": "Chyba pri spustení stroja",
+    "startingMachine": "Spúšťanie...",
+    "start": "Spustiť",
+    "duration": "Trvanie (minúty)",
+    "expectedEnd": "Očakávané ukončenie",
+    "noMachinesInThisRoom": "V tejto miestnosti nie sú žiadne stroje",
+    "autoRefreshEvery5Seconds": "🔄 Automatické obnovenie každých 5 sekúnd",
+    "refreshNow": "Obnoviť teraz",
+    "notSet": "Nenastavené",
+    "timeRemaining": "Zostávajúci čas",
+    "defaultDuration": "Predvolené trvanie",
+    "started": "Spustené",
+    "expectedEndTime": "Očakávané ukončenie",
+    "noNotifications": "Žiadne upozornenia",
+    "unread": "neprečítané",
+    "close": "Zavrieť",
+    "expired": "Vypršané"
   },
   "machines": {
     "title": "Stroje",
